feat: route GET api/products
