# backend/docs/openapi.yaml
@@ -137,6 +137,29 @@ paths:
               schema: { $ref: '#/components/schemas/User' }
 
   /api/products:
+    get:
+        summary: Liste des produits
+        parameters:
+        - in: query
+          name: owner_id
+          schema: { type: string }
+        - in: query
+          name: category
+          schema: { type: string }
+        - in: query
+          name: search
+          schema: { type: string }
+        responses:
+          '200':
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    categories:
+                      type: array
+                      items: { $ref: '#/components/schemas/Product' }
     post:
       summary: Créer un produit
       security: [{ bearerAuth: [] }]
